[B]Version 1.1.53[/B]
stripchat - fix thumbnails
Pornhub - fix next page