@@ -1,0 +1,2 @@
+Site URL: https://javxxx.video/
+DMCA: https://javxxx.video/abuse-content-removal/
