@@ -1,0 +1,2 @@
+Site URL: https://myxxx.video/
+DMCA: https://myxxx.video/abuse-content-removal/
