@@ -1,3 +1,4 @@
 [B]Version 1.1.53[/B]
 stripchat - fix thumbnails
 Pornhub - fix next page
+MyXXX, FreeXXX, JavXXX, xMILF - new sites
